makes parenthesization less/un ambiguous (always parenthesizes left child in a type if it is arr/sum). fixes some other stylistic issues. It may be better to decrease spacing as the current formatting makes the cursor inspector overflow when the suggestions are long-ish

--- a/src/haz3lweb/www/style.css
+++ b/src/haz3lweb/www/style.css
@@ -571,17 +571,11 @@ body {
 }
 
 .unsolved-empty-hole-path {
-  /* fill: #f0d1d1;
-  stroke: var(--err-color);
-  stroke-width: 1.2px;
-  stroke-dasharray: 1, 1;
-  vector-effect: non-scaling-stroke; */
   fill: #d001;
-  stroke-dasharray: 1, 1;
+  stroke-dasharray: 2, 3;
   stroke: var(--err-color);
-  stroke-width: 1.2px;
+  stroke-width: 1.15px;
   vector-effect: non-scaling-stroke;
-  /* mix-blend-mode: color;*/
 }
 
 .selection {
